# JNI-Image

./: CMakeLists.txt  Main.qml  calculator.cpp  calculator.h  main.cpp
android/: AndroidManifest.xml
android/res/values/: libs.xml
android/src/com/example/jnisample/: MainActivity.java
